From interpreter to JIT Compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,28 +8,8 @@ option(DEBUG "Enable debugging symbols" OFF)
 
 include_directories( "include" )
 
-if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 
-    # using Clang
-
-    add_compile_options(
-                    -std=c++14
-                    -Wall
-                    -Wextra
-                    -pedantic
-                    )
-    if(DEBUG)
-        #Debug Mode
-        add_compile_options(
-                    -g
-                    )
-    else()
-        #Release Mode
-        add_compile_options(
-                    -O3
-                    )
-    endif()
-elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     
     # using GCC
 
@@ -50,21 +30,6 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
                     -O3
                     )
     endif()
-
-elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-
-    # using Visual Studio C++
-
-    add_compile_options(/std=c++14
-                    /W4
-                    /Wall
-                    )
-    if(DEBUG)
-        #Debug Mode
-    else()
-        #Release Mode
-        add_compile_options( /O2t )
-    endif()
 endif()
 
 
@@ -79,6 +44,8 @@ else()
     add_library(METASM STATIC ${SOURCES})
 endif()
 
+target_link_libraries( METASM "libgccjit.so" )
+
 if(BUILD_EXAMPLES)
 
     set(LINK_LIBS ${LINK_LIBS} METASM)
@@ -90,17 +57,6 @@ if(BUILD_EXAMPLES)
     add_executable(basics ${SOURCE})
     target_link_libraries(basics ${LINK_LIBS})
 
-    set(LINK_LIBS ${LINK_LIBS} METASM)
-
-    set(SOURCE
-        "examples/logics.cpp"
-        )
-
-    add_executable(logics ${SOURCE})
-    target_link_libraries(logics ${LINK_LIBS})
-
-    set(LINK_LIBS ${LINK_LIBS} METASM)
-
     set(SOURCE
         "examples/labels.cpp"
         )
@@ -108,13 +64,10 @@ if(BUILD_EXAMPLES)
     add_executable(labels ${SOURCE})
     target_link_libraries(labels ${LINK_LIBS})
 
-    set(LINK_LIBS ${LINK_LIBS} METASM)
-
     set(SOURCE
         "examples/square_root.cpp"
         )
 
     add_executable(square_root ${SOURCE})
     target_link_libraries(square_root ${LINK_LIBS})
-
-endif()
+endif() 
