--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ before_script:
     - export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/usr/lib/gcc/x86_64-linux-gnu/6
     - export LIBRARY_PATH=${LIBRARY_PATH}:/usr/lib/gcc/x86_64-linux-gnu/6
     - export PATH=${PATH}:/usr/lib/gcc/x86_64-linux-gnu/6:/usr/lib/gcc/x86_64-linux-gnu/6/include
-    - cmake -DGCCJIT_PATH="/usr/lib/gcc/x86_64-linux-gnu/6" ..;
+    - cmake -DGCCJIT_PATH="/usr/lib/gcc/x86_64-linux-gnu/6" -DBUILD_TESTS=1 ..;
     
 script:
     - make -j 2
@@ -72,3 +72,4 @@ after_success:
       ./basics;
       ./labels;
       ./square_root;
+      ./tests -s -d yes
